# buteo-sync-plugins-contacts

./: CMakeLists.txt  config.h.in
accounts/: CMakeLists.txt  address-book-app.application  buteo-address-book-app.application  buteo-google-contacts.service  google-buteo-contacts.service  google-contacts.service
buteo-contact-client/: CMakeLists.txt  UAbstractRemoteSource.cpp  UAbstractRemoteSource.h  UAuth.cpp  UAuth.h  UContactsBackend.cpp  UContactsBackend.h  UContactsClient.cpp  UContactsClient.h  UContactsCustomDetail.cpp  UContactsCustomDetail.h
cmake/: lcov.cmake
debian/: changelog  control  copyright
google/: CMakeLists.txt  GConfig.cpp  GConfig.h  GContactAtom.cpp  GContactAtom.h  GContactGroupsMap.cpp  GContactGroupsMap.h  GContactImageDownloader.cpp  GContactImageDownloader.h  GContactImageUploader.cpp  GContactImageUploader.h  GContactStream.cpp  GContactStream.h  GContactsClient.cpp  GContactsClient.h  GRemoteSource.cpp  GRemoteSource.h  GTransport.cpp  GTransport.h  LICENSE  Makefile  README.md  atom_global.h  buteo-gcontact-plugin_global.h
google/xmls/: CMakeLists.txt
google/xmls/client/: CMakeLists.txt  googlecontacts.xml
google/xmls/sync/: CMakeLists.txt  buteo-google-contacts.xml  google-buteo-contacts.xml  google-contacts.xml
storage-change-notifier/: CMakeLists.txt
storage-change-notifier/contacts/: CMakeLists.txt  ContactsChangeNotifier.cpp  ContactsChangeNotifier.h  ContactsChangeNotifierPlugin.cpp  ContactsChangeNotifierPlugin.h
tests/: CMakeLists.txt
tests/plugins/contacts/: CMakeLists.txt  qcontactmemorybackend.cpp  qcontactmemorybackend_p.h
tests/unittest/: CMakeLists.txt  GContactImageUploader.cpp  GTransport.cpp  MockAuthenticator.cpp  MockAuthenticator.h  MockRemoteSource.cpp  MockRemoteSource.h  TestContactsClient.cpp  TestContactsClient.h  TestContactsMain.cpp  TestGRemoteSource.cpp  TestGoogleContactParser.cpp  config-tests.h.in  profile-test.xml
tests/unittest/data/: fast_sync_changed_both_sides_local.vcf  fast_sync_changed_both_sides_local_result.vcf  fast_sync_changed_both_sides_remote.vcf  fast_sync_changed_both_sides_remote_result.vcf  fast_sync_delete_same_contact_local.vcf  fast_sync_delete_same_contact_local_result.vcf  fast_sync_delete_same_contact_remote.vcf  fast_sync_with_a_local_change_local.vcf  fast_sync_with_a_local_change_local_result.vcf  fast_sync_with_a_local_change_remote_result.vcf  fast_sync_with_a_local_removal_remote_result.vcf  fast_sync_with_a_remote_change_local.vcf  fast_sync_with_a_remote_removal_local.vcf  fast_sync_with_new_local_contact_local.vcf  fast_sync_with_new_local_contact_local_result.vcf  fast_sync_with_new_local_contact_remote.vcf  fast_sync_with_new_local_contact_remote_result.vcf  fast_sync_without_changes_remote.vcf  google_contact_created_page.txt  google_contact_full_fetch.vcf  google_contact_full_fetch_page_0.txt  google_contact_full_fetch_page_1.txt  google_contact_updated_reply.txt  google_not_found_contact_response.txt  google_single_entry.txt  local_previous_synced_local.vcf  local_previous_synced_local_result.vcf  local_previous_synced_remote_result.vcf  new_database_local.vcf  new_database_remote.vcf  slow_sync_with_pages_remote.vcf
